catnip_grammar/grammar.js
    source_file: $ => seq(
      repeat($._newline),  // Allow leading newlines
      optional($._statements),
    ),

    // Statements - separated by semicolons or newlines
    _statements: $ => seq(
      $.statement,
      repeat(seq(repeat1($._statement_separator), $.statement)),
      repeat($._statement_separator),
    ),

    statement: $ => choice(
      $.assignment,
      $.while_stmt,
      $.for_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.try_stmt,
      $.with_stmt,
      $.raise_stmt,
      $.pragma_stmt,
      $.struct_stmt,
      $.trait_stmt,
      $.enum_stmt,
      $.union_stmt,
      $._expression,
    ),

    enum_stmt: $ => seq(
      'enum',
      field('name', $.identifier),
      '{',
      repeat($.enum_variant),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(';'),
    ),

    // Union definition (tagged union / ADT)
    assignment: $ => seq(
      repeat($.decorator),  // Zero or more decorators
      $.lvalue,
      repeat(seq('=', $.lvalue)),
      '=',
      $._expression,
    ),

    while_stmt: $ => seq('while', $._expression, $.block),

    for_stmt: $ => seq('for', $.unpack_target, 'in', $._expression, $.block),

    try_stmt: $ => seq(
      'try',
      field('body', $.block),
      optional($.except_block),
      optional($.finally_clause),
    ),

    except_block: $ => seq('except', '{', repeat1($.except_clause), '}'),

    except_clause: $ => seq(
      optional(seq(field('binding', $.identifier), ':')),
      $.except_pattern,
      '=>',
      field('handler', $.block),
    ),

    except_pattern: $ => choice(
      $.except_types,
      $.pattern_wildcard,
    ),

    except_types: $ => seq(
      $.identifier,
      repeat(seq('|', $.identifier)),
    ),

    finally_clause: $ => seq('finally', field('body', $.block)),

    raise_stmt: $ => prec.right(seq('raise', optional(field('value', $._expression)))),

    if_expr: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause),
    )),

    elif_clause: $ => seq(
      'elif',
      field('condition', $._expression),
      field('consequence', $.block),
    ),

    else_clause: $ => seq('else', field('body', $.block)),

    pattern_wildcard: $ => '_',
    block: $ => seq(
      '{',
      repeat($._newline),
      optional($._statements),
      '}',
    ),

    // Expressions
    _expression: $ => $._null_coal,

    _bool_or: $ => choice($.bool_or, $._bool_and),
    bool_or: $ => prec.left(PREC.OR, seq($._bool_or, 'or', $._bool_and)),

    _bool_and: $ => choice($.bool_and, $._bool_not),
    bool_and: $ => prec.left(PREC.AND, seq($._bool_and, 'and', $._bool_not)),

    _bool_not: $ => choice($.bool_not, $._comparison),
    bool_not: $ => prec(PREC.NOT, seq('not', $._bool_not)),

    comparison: $ => prec.left(PREC.COMPARE,
      seq($._bit_or, repeat1(seq($.comp_op, $._bit_or)))
    ),
    comp_op: $ => choice('<=', '<', '>=', '>', token('!='), '==', 'in', seq('not', 'in'), 'is', seq('is', 'not')),

    _bit_or: $ => choice($.bit_or, $._bit_xor),
    bit_or: $ => prec.left(PREC.BIT_OR, seq($._bit_or, '|', $._bit_xor)),

    _bit_xor: $ => choice($.bit_xor, $._bit_and),
    bit_xor: $ => prec.left(PREC.BIT_XOR, seq($._bit_xor, '^', $._bit_and)),

    _bit_and: $ => choice($.bit_and, $._shift),
    bit_and: $ => prec.left(PREC.BIT_AND, seq($._bit_and, '&', $._shift)),

    _shift: $ => choice($.shift, $._additive),
    shift: $ => prec.left(PREC.SHIFT, seq($._shift, $.shift_op, $._additive)),
    shift_op: $ => choice('<<', '>>'),

    _additive: $ => choice($.additive, $._multiplicative),
    additive: $ => prec.left(PREC.ADD, seq($._additive, $.add_sub_op, $._multiplicative)),
    add_sub_op: $ => choice('+', '-'),

    _multiplicative: $ => choice($.multiplicative, $._unary),
    multiplicative: $ => prec.left(PREC.MUL, seq($._multiplicative, $.mul_div_op, $._unary)),
    mul_div_op: $ => choice('*', '/', '//', '%'),

    _unary: $ => choice($.unary, $._exponent),
    unary: $ => prec(PREC.UNARY, seq($.unary_op, $._unary)),
    unary_op: $ => choice('-', '+', '~'),

    _exponent: $ => choice($.exponent, $.literal, $._primary),
    exponent: $ => prec.right(PREC.EXP, seq($._exponent, '**', $._unary)),

    chained: $ => prec.left(PREC.MEMBER, seq(
      choice(
        $.bracket_list,
        $.bracket_dict,
        $.list_literal,
        $.tuple_literal,
        $.set_literal,
        $.dict_literal,
        $.call,
        $._atom,
        $.literal,
      ),
      repeat1($._member),
    )),

    call: $ => prec(PREC.CALL, seq($._atom, $.arguments)),

    _member: $ => choice(
      $.getattr,
      $.callattr,
      $.call_member,
      $.broadcast,
      $.index,
      $.fullslice,
    ),

    getattr: $ => prec(1, seq('.', field('attribute', $.identifier))),
    callattr: $ => prec(2, seq('.', field('method', $.identifier), $.arguments)),
    broadcast: $ => prec.dynamic(-1, seq('.[', $.broadcast_op, ']')),
    index: $ => seq('[', $._slice_expr, repeat(seq(',', $._slice_expr)), ']'),
    fullslice: $ => prec.dynamic(1, seq('.[', $.slice_range, ']')),

    _slice_expr: $ => choice($._expression, $.slice_range),

    slice_range: $ => seq(
      optional($._expression),
      ':',
      optional($._expression),
      optional(seq(':', optional($._expression))),
    ),

    broadcast_op: $ => choice(
      $.broadcast_if,
      $.broadcast_nd_recursion,
      $.broadcast_binary,
      $.broadcast_unary,
      $.broadcast,
      $._expression,
    ),

    // data.[~~ lambda] - broadcast ND-recursion (higher prec than nd_recursion)
    broadcast_if: $ => seq(
      'if',
      choice($.broadcast_binary, $.broadcast_unary, $._expression),
    ),

    broadcast_binary: $ => seq($.bcast_op, $._expression),

    bcast_op: $ => choice(
      '+', '-', '*', '/', '//', '%', '**',
      '<', '<=', '>', '>=', '==', '!=',
      '&', '|', '^', '<<', '>>',
      'and', 'or',
    ),

    broadcast_unary: $ => $.bcast_unary_op,
    bcast_unary_op: $ => choice('abs', 'not', '-', '+', '~'),

    arguments: $ => seq('(', optional($._params), ')'),

    _params: $ => choice($.args_kwargs, $.args, $.kwargs),

    args: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
      optional(','),
    ),

    _atom: $ => choice(
      $.identifier,
      $.group,
      $.block,
      $.match_expr,
      $.if_expr,
    ),

    group: $ => seq('(', $._expression, ')'),

    lambda_expr: $ => seq(
      '(',
      optional($.lambda_params),
      ')',
      optional(seq(':', field('return_type', $.type_expr))),
      '=>',
      $.block,
    ),

    lambda_params: $ => choice(
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
        ',',
        $.variadic_param,
      ),
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
      ),
      $.variadic_param,
    ),

    lambda_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq('=', field('default', $._expression))),
    ),

    unpack_target: $ => choice(
      $.unpack_tuple,
      $.unpack_sequence,
      $.identifier,
    ),

    unpack_sequence: $ => seq(
      $._unpack_item,
      ',',
      $._unpack_item,
      repeat(seq(',', $._unpack_item)),
      optional(','),
    ),

    _unpack_item: $ => choice(
      $.unpack_tuple,
      $.variadic_param,
      $.identifier,
    ),

    lvalue: $ => choice($.setattr, $.unpack_target),

    bracket_list: $ => seq('[', optional($.collection_items), ']'),

    bracket_dict: $ => seq('{', $.bracket_dict_items, '}'),

    bracket_dict_items: $ => seq(
      $._bracket_dict_entry,
      repeat(seq(',', $._bracket_dict_entry)),
      optional(','),
    ),

    _bracket_dict_entry: $ => choice($.colon_pair, $.dict_spread),

    colon_pair: $ => seq(
      field('key', $._expression),
      ':',
      field('value', $._expression),
    ),

    // Function-call collections: list(...), tuple(...), set(...), dict(...)
    list_literal: $ => seq('list', '(', optional($.collection_items), ')'),
    tuple_literal: $ => seq('tuple', '(', optional($.collection_items), ')'),
    set_literal: $ => seq('set', '(', optional($.collection_items), ')'),

    collection_items: $ => seq(
      $.collection_item,
      repeat(seq(',', $.collection_item)),
      optional(','),
    ),

    collection_item: $ => choice(
      $._expression,
      $.collection_spread,
    ),

    collection_spread: $ => seq('*', field('value', $._expression)),

    dict_literal: $ => seq('dict', '(', optional(choice(
      prec(1, $.dict_items),
      seq($.dict_from_iterable, optional(seq(',', $.dict_items))),
    )), ')'),

    // dict(iterable_of_pairs) - delegates to builtin dict()
    // optional trailing dict_items allows dict(iterable, key=val, **spread)
    dict_items: $ => seq(
      $._dict_entry,
      repeat(seq(',', $._dict_entry)),
      optional(','),
    ),

    _dict_entry: $ => choice($.dict_pair, $.dict_kwarg, $.dict_spread),

    dict_pair: $ => seq(
      '(',
      field('key', $._expression),
      ',',
      field('value', $._expression),
      ')',
    ),

    dict_kwarg: $ => seq(
      field('key', $.identifier),
      '=',
      field('value', $._expression),
    ),

    dict_spread: $ => seq(
      '**',
      field('value', $._expression),
    ),

    literal: $ => choice(
      $.none,
      $.true,
      $.false,
      $.nd_empty_topos,
      $.string,
      $.fstring,
      $.bstring,
      $.number,
    ),

    number: $ => choice($.imaginary, $.decimal, $.float, $.integer),

    integer: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[bB][01]+/,
      /0[oO][0-7]+/,
      /\d+/,
    )),

    string: $ => choice(
      $._double_string,
      $._single_string,
      $._long_double_string,
      $._long_single_string,
    ),

    // Simple strings as tokens to prevent extras (comments) from being inserted mid-string
    _double_string: $ => token(seq('"', repeat(choice(/\\['"\\nrtbfv0]|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\U[0-9a-fA-F]{8}/, /[^"\\]+/)), '"')),
    _single_string: $ => token(seq("'", repeat(choice(/\\['"\\nrtbfv0]|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\U[0-9a-fA-F]{8}/, /[^'\\]+/)), "'")),
    // Long strings - handled as single tokens to avoid lookahead
    _long_double_string: $ => token(seq('"""', /([^"\\]|\\.|"[^"]|""[^"])*/, '"""')),
    _long_single_string: $ => token(seq("'''", /([^'\\]|\\.|'[^']|''[^'])*/, "'''")),

    fstring: $ => choice(
      $._fstring_double,
      $._fstring_single,
      $._long_fstring_double,
      $._long_fstring_single,
    ),

    _fstring_double: $ => seq(/[fF]"/, repeat(choice($.escape_sequence, $.interpolation, $.fstring_text_double)), '"'),
    _fstring_single: $ => seq(/[fF]'/, repeat(choice($.escape_sequence, $.interpolation, $.fstring_text_single)), "'"),
    // Long f-strings with interpolation support
    _long_fstring_double: $ => seq(
      /[fF]"""/,
      repeat(choice(
        $.escape_sequence,
        $.interpolation,
        $.fstring_text_long_double,
      )),
      '"""'
    ),
    _long_fstring_single: $ => seq(
      /[fF]'''/,
      repeat(choice(
        $.escape_sequence,
        $.interpolation,
        $.fstring_text_long_single,
      )),
      "'''"
    ),

    // F-string literal text nodes (named so they appear in AST)
    // Use choice to handle ! separately to avoid conflict with != operator
    interpolation: $ => seq(
      '{',
      $._expression,
      optional($.fstring_debug),
      optional(seq('!', $.fstring_conversion)),
      optional(seq(':', $.format_spec)),
      '}'
    ),

    // Debug flag: f"{x=}" shows "x=42"
    fstring_debug: $ => '=',

    // Conversion flag: !r (repr), !s (str), !a (ascii)
    fstring_conversion: $ => /[rsa]/,

    // Format specification for f-string interpolations
    // token.immediate prevents extras (comments) from matching inside the spec
    // Examples: .2f, >10, ^20, 0>8, #x
    format_spec: $ => token.immediate(prec(200, /[^}]+/)),

    identifier: $ => /[a-zA-Z_]\w*/,
