catnip_grammar/test/corpus/collections.txt
================================================================================
List literal
================================================================================

list(1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (statement
    (list_literal
      (collection_items
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))))))

================================================================================
Tuple literal
================================================================================

tuple(1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (statement
    (tuple_literal
      (collection_items
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))))))

================================================================================
Set literal
================================================================================

set(1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (statement
    (set_literal
      (collection_items
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))
        (collection_item
          (literal
            (number
              (integer))))))))

================================================================================
Dict literal
================================================================================

dict(("a", 1), ("b", 2))

--------------------------------------------------------------------------------

(source_file
  (statement
    (dict_literal
      (dict_items
        (dict_pair
          key: (literal
            (string))
          value: (literal
            (number
              (integer))))
        (dict_pair
          key: (literal
            (string))
          value: (literal
            (number
              (integer))))))))

================================================================================
Dict kwargs
================================================================================

dict(name="Alice", age=30)

--------------------------------------------------------------------------------

(source_file
  (statement
    (dict_literal
      (dict_items
        (dict_kwarg
          key: (identifier)
          value: (literal
            (string)))
        (dict_kwarg
          key: (identifier)
          value: (literal
            (number
              (integer))))))))

================================================================================
Dict mixed pairs and kwargs
================================================================================

dict((1, "un"), name="Alice")

--------------------------------------------------------------------------------

(source_file
  (statement
    (dict_literal
      (dict_items
        (dict_pair
          key: (literal
            (number
              (integer)))
          value: (literal
            (string)))
        (dict_kwarg
          key: (identifier)
          value: (literal
            (string)))))))

================================================================================
Empty list
================================================================================

list()

--------------------------------------------------------------------------------

(source_file
  (statement
    (list_literal)))

================================================================================
Index access
================================================================================

xs[0]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (identifier)
      (index
        (literal
          (number
            (integer)))))))

================================================================================
Slice access
================================================================================

xs[1:5]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (identifier)
      (index
        (slice_range
          (literal
            (number
              (integer)))
          (literal
            (number
              (integer))))))))

================================================================================
Attribute access
================================================================================

obj.attr

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (identifier)
      (getattr
        attribute: (identifier)))))

================================================================================
Method call
================================================================================

obj.method(1, 2)

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (identifier)
      (callattr
        method: (identifier)
        (arguments
          (args
            (literal
              (number
                (integer)))
            (literal
              (number
                (integer)))))))))

================================================================================
Bracket list literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_list
      (collection_items
        (collection_item
          (literal (number (integer))))
        (collection_item
          (literal (number (integer))))
        (collection_item
          (literal (number (integer))))))))

================================================================================
Empty bracket list
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_list)))

================================================================================
Bracket list with trailing comma
================================================================================

[1, 2,]

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_list
      (collection_items
        (collection_item
          (literal (number (integer))))
        (collection_item
          (literal (number (integer))))))))

================================================================================
Bracket list with spread
================================================================================

[*xs, 1]

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_list
      (collection_items
        (collection_item
          (collection_spread
            value: (identifier)))
        (collection_item
          (literal (number (integer))))))))

================================================================================
Bracket dict literal
================================================================================

{"a": 1, "b": 2}

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_dict
      (bracket_dict_items
        (colon_pair
          key: (literal (string))
          value: (literal (number (integer))))
        (colon_pair
          key: (literal (string))
          value: (literal (number (integer))))))))

================================================================================
Bracket dict with spread
================================================================================

{**base, "x": 1}

--------------------------------------------------------------------------------

(source_file
  (statement
    (bracket_dict
      (bracket_dict_items
        (dict_spread
          value: (identifier))
        (colon_pair
          key: (literal (string))
          value: (literal (number (integer))))))))

================================================================================
Bracket list chained index
================================================================================

[1, 2, 3][0]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (bracket_list
        (collection_items
          (collection_item
            (literal (number (integer))))
          (collection_item
            (literal (number (integer))))
          (collection_item
            (literal (number (integer))))))
      (index
        (literal (number (integer)))))))

================================================================================
Bracket dict chained index
================================================================================

{"a": 1}["a"]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chained
      (bracket_dict
        (bracket_dict_items
          (colon_pair
            key: (literal (string))
            value: (literal (number (integer))))))
      (index
        (literal (string))))))
