catnip_grammar/test/corpus/fstrings_advanced.txt
================================================================================
F-string debug specifier
================================================================================

f"{x=}"

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (fstring
        (interpolation
          (identifier)
          (fstring_debug))))))

================================================================================
F-string conversion specifier
================================================================================

f"{x!r}"

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (fstring
        (interpolation
          (identifier)
          (fstring_conversion))))))

================================================================================
F-string format spec
================================================================================

f"{x:.2f}"

--------------------------------------------------------------------------------

(source_file
  (statement
    (literal
      (fstring
        (interpolation
          (identifier)
          (format_spec))))))
